<resources>
  <string name="app_name">The Watcher</string>
  <string name="title_activity_main">The Watcher</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_pins">Pins</string>
  <string name="menu_restrictions">Restrictions</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>
  <string name="app_select_description">Select the appEntities you want to restrict.</string>
  <string name="next_button_text">NEXT</string>
  <string name="welcome_text">Welcome! What is your name?</string>
  <string name="username_prompt_text">What should I call you?</string>
  <string name="hint_name">Name</string>
  <string name="hint_username">Username</string>
  <string name="email_prompt_text">What\'s your email?</string>
  <string name="hint_email">Email</string>
  <string name="login_failure">Could not login.</string>
  <string name="your_productivity">Your productivty awaits...</string>
  <string name="new_user">New User</string>
  <string name="the_watcher">The Watcher</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="apps_selected_prompt">Select how much access you want for each appEntity</string>
  <string name="amount_of_time_prompt">Enter how much time you want to have access to this appEntity.</string>
  <string name="time_hint">Minutes</string>
  <string name="set_restriction">SET RESTRICTION</string>
  <string name="done_button">DONE</string>
  <string name="current_location_text">Current locationEntity</string>
  <string name="maximum_time">Maximum time</string>
</resources>
