<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:appEntity="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  appEntity:startDestination="@+id/nav_home">

  <fragment
    android:id="@+id/nav_home"
    android:label="@string/menu_home"
    android:name="edu.cnm.deepdive.thewatcher.controller.ui.home.HomeFragment"
    tools:layout="@layout/fragment_home"/>

  <fragment
    android:id="@+id/nav_pins"
    android:label="@string/menu_pins"
    android:name="edu.cnm.deepdive.thewatcher.controller.ui.pins.PinsFragment"
    tools:layout="@layout/fragment_pins"/>

  <fragment
    android:id="@+id/nav_restrictions"
    android:label="@string/menu_restrictions"
    android:name="edu.cnm.deepdive.thewatcher.controller.ui.restrictions.RestrictionsFragment"
    tools:layout="@layout/fragment_restrictions"/>

  <fragment
    android:id="@+id/nav_tools"
    android:label="@string/menu_tools"
    android:name="edu.cnm.deepdive.thewatcher.controller.ui.tools.ToolsFragment"
    tools:layout="@layout/fragment_tools"/>


</navigation>