<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/set_restriction_fragment"
  android:layout_width="300dp"
  android:layout_height="175dp"
  android:layout_gravity="center"
  tools:context=".selectTimeFragment"
  app:layout_anchorGravity="center">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/amount_of_time_prompt"
    android:textSize="18sp"
    android:gravity="center"
    android:layout_margin="10dp"/>

  <EditText
    android:id="@+id/time_value"
    android:layout_width="75dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:hint="@string/time_hint"
    android:inputType="time"/>

  <Button
    android:id="@+id/set_restriction_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|bottom"
    android:text="@string/set_restriction"/>

</FrameLayout>