<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:appEntity="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.LoginActivity">

  <TextView
    android:id="@+id/sign_in_welcome_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/the_watcher"
    android:textSize="12pt"
    appEntity:layout_constraintTop_toTopOf="parent"
    appEntity:layout_constraintBottom_toTopOf="@id/sign_in"
    appEntity:layout_constraintStart_toStartOf="parent"
    appEntity:layout_constraintEnd_toEndOf="parent"/>

  <com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/login_button_padding"
    appEntity:layout_constraintTop_toTopOf="parent"
    appEntity:layout_constraintBottom_toBottomOf="parent"
    appEntity:layout_constraintStart_toStartOf="parent"
    appEntity:layout_constraintEnd_toEndOf="parent"/>

  <Button
    android:id="@+id/new_user"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    appEntity:layout_constraintTop_toBottomOf="@id/sign_in"
    android:text="@string/new_user"
    appEntity:layout_constraintStart_toStartOf="parent"
    appEntity:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/productivity_comment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/your_productivity"
    android:textSize="10pt"
    appEntity:layout_constraintTop_toBottomOf="@id/new_user"
    appEntity:layout_constraintBottom_toBottomOf="parent"
    appEntity:layout_constraintStart_toStartOf="parent"
    appEntity:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>